# speech

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  concourse.yml
cmake/: speech-config.cmake.in
src/: CMakeLists.txt  askfor.cpp  askfor.h  concepts_utility.h  namedtype.cpp  namedtype.h  receiver.cpp  receiver.h  tcpreceiver.cpp  tcpreceiver.h  tcptransmitter.cpp  tcptransmitter.h  transmitter.cpp  transmitter.h  typehash.h  udpreceiver.cpp  udpreceiver.h  udptransmitter.cpp  udptransmitter.h  uniqueness.cpp  uniqueness.h
src/examples/: CMakeLists.txt
src/examples/chit_chat/: CMakeLists.txt  bjarne.cpp  john.cpp  questions.h
src/examples/model/: CMakeLists.txt  device_info.h  greeting.h  me.h  roll_dice.h
src/examples/qobject/: CMakeLists.txt  auto_serialize.cpp  car_info.cpp  car_info.h  entity.cpp  entity.h  qobject_receive.cpp
src/examples/real-applications/: CMakeLists.txt  discovery.cpp
src/examples/real-applications/chat/: CMakeLists.txt
src/examples/real-applications/chat/client/: CMakeLists.txt  main.cpp  send_event_text_edit.cpp  send_event_text_edit.h  server_comm.cpp  server_comm.h
src/examples/real-applications/chat/messages/: CMakeLists.txt  messages.h
src/examples/real-applications/chat/server/: CMakeLists.txt  main.cpp
src/examples/real-applications/discovery/: CMakeLists.txt  discovery.cpp
src/examples/serialization/: CMakeLists.txt  car_info.cpp  car_info.h  rolls.cpp  rolls.h  serialize-receive.cpp  serialize-transmit.cpp
src/examples/tcp/: CMakeLists.txt  ask.cpp  feed-function.cpp  feed.cpp  file-receive.cpp  file-transmit.cpp  questions.h  respond.cpp  server-with-functors.cpp  server.cpp
src/examples/udp/: CMakeLists.txt  models.h  receive_from_queue.cpp  receive_with_inheritance.cpp  transmit.cpp  transmit_function.cpp
src/speech/: handler.h  handler_f.h  handler_f_impl.h  handler_impl.h  qobject_serialization.h  receiver.h  receiver_impl.h  shared_socket.h  shared_socket_impl.h  speech.h  transmitter.h  transmitter_impl.h  util.h
src/speech/chit_chat/: fellow.h
src/speech/error/: connection_error.h  port_in_use_error.h
src/speech/handle/: handle.h  shared_ptr_handle.h  unique_ptr_handle.h
src/speech/serialize/: container_serialize.h  macro.h  qobject_serialize.h  serialize.h
src/speech/tcp/: file_transmitter.h  tcp_ask.h  tcp_ask_impl.h  tcp_receiver.h  tcp_receiver_impl.h  tcp_server.h  tcp_server_impl.h  tcp_server_util.h  tcp_server_util_impl.h  tcp_transmitter.h  tcp_transmitter_impl.h  tcp_transmitter_util.h  tcp_transmitter_util_impl.h
src/speech/traits/: implements_left_stream.h  implements_right_stream.h  is_container.h  is_shared_ptr.h  is_unique_ptr.h
src/speech/udp/: udp_receiver.h  udp_receiver_impl.h  udp_transmitter.h  udp_transmitter_impl.h  udp_transmitter_util.h  udp_transmitter_util_impl.h
src/test/: CMakeLists.txt  ask.cpp  serialize.cpp
